--- a/HTML2/Teste.css
+++ b/HTML2/Teste.css
@@ -2,25 +2,13 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+} 
+h1 {
+    color: red
 }
-
-h3 {
+#ll {
+    color: rgb(81, 42, 165);
+}
+#oi {
     color: blue;
 }
-
-#ccxp {
-    color: gold;
-} 
-
-.roda{
-    color: rebeccapurple;
-} 
-
-*{
-    color: red;
-}
-
-header li {
-    display: none;
-}
-
