--- a/HTML2/tatooCSS.css
+++ b/HTML2/tatooCSS.css
@@ -8,7 +8,7 @@ header,
 #tatu,
 #titulotema,
 #cont{
-    padding: 16px;;
+    padding: 16px;
     background-color: orange;
     color: #fff;
 }
@@ -50,6 +50,12 @@ header nav li a {
     padding-right: 16px;
 }
 
+.reparo {
+    width: 100%;
+    margin: 0 auto;
+
+}
+
 header .conteiner,
 section .conteiner {
     display: flex;
@@ -73,7 +79,7 @@ textarea {
 }
 
 input,
-textarea, {
+textarea {
     font-weight: bold;
 }
 
@@ -95,6 +101,11 @@ section p {
 
 .conteiner h3 {
     margin-bottom: 16px;
+}
+
+#studio {
+    width: 336.09px;
+    height: 491px;
 }
 
 .conteiner img {
@@ -149,14 +160,11 @@ ul.tatooadores li figcaption {
 
 .redes li {
     display: inline;
+    margin-left: 24px;
 }
 
 .redes li a {
     text-decoration: none;
-}
-
-#tema{
-    margin-left: 100px;
 }
 
 .modelos {
@@ -166,6 +174,7 @@ ul.tatooadores li figcaption {
 }
 
 ul.modelos {
+    margin-left: 100px;
     list-style-type: none; /* neste caso n consegui utilizar o comando text-decoration none; de nenhuma maneira, mas encontrei este, focado em list "acredito eu"*/
 }
 
@@ -197,20 +206,17 @@ ul.modelos li figcaption {
     margin-right: 45px;
 }
 
-#contato .conteiner {
-    display: block;
-}
+
 
 .metodo-contato {
     display: flex;
     justify-content: space-between;
 }
-#reto {
-    margin-left:32px ;
-}
 
-#cont {
-    margin-left: 32px;
+
+#cont,
+#tatu { 
+    max-width: 100%;
 }
 
 .conteiner {
@@ -228,6 +234,13 @@ ul.modelos li figcaption {
     z-index: 1;
 }
 
+#filial {
+    margin-right: 136px;
+}
+
+#reto {
+    margin-left: 136px;
+}
 
 
 form input,
@@ -270,7 +283,8 @@ footer {
 }
 
 #acompanhe {
-    margin-left: 33px; /*necessrio aprender fazer de outra maneira*/
+    margin-left: 97px; /*necessrio aprender fazer de outra maneira*/
+    margin-bottom: 16px;
 }
 
 
